k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: psn-account-lookup-api
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "80"
  labels:
    app: psn-account-lookup-api
spec:
  selector:
    app: psn-account-lookup-api
  ports:
    - name: http
      port: 80
      targetPort: http
